# zkswss

./: .gitignore  Cargo.toml  README.md
zks-client-binary/: rules.yaml  rules1.yaml
zks-client-binary/data/: cidrs.db  proxyip.db
zks-client-cli/: Cargo.toml
zks-client-cli/src/: cli.rs  lib.rs  main.rs
zks-client-cli/src/proxy/: http.rs  hybrid.rs  mod.rs  router.rs  socks5.rs
zks-client-cli/src/tunnel/: client.rs  mod.rs
zks-clinet-gui/: .gitignore  ZKSWorkerGUI.slnx  build.txt
zks-clinet-gui/ZKSWorkerGUI/: App.Designer.cs  App.cs  App.resx  Cidrs.Designer.cs  Cidrs.cs  Cidrs.resx  Csv.Designer.cs  Csv.cs  DatabaseHelper.cs  Program.cs  ZKSWorkerGUI.csproj
zks-clinet-gui/ZKSWorkerGUI/Properties/: Resources.Designer.cs
zks-clinet-gui/ZKSWorkerGUI/Properties/PublishProfiles/: FolderProfile.pubxml
zks-pages/: _worker.js
zks-proto/: Cargo.toml
zks-proto/src/: error.rs  lib.rs  message.rs
zks-worker/: Cargo.toml  wrangler.toml
zks-worker/src/: lib.rs  session.rs
