[workspace]
members = ["zks-worker", "zks-client-cli", "zks-proto"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["zks-protocol"]
repository = "source URL: https://github.com/zks-protocol"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.11.1"
