[package]
name = "zks-client-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zks-core"
path = "src/main.rs"

[dependencies]
zks-proto = { path = "../zks-proto" }
bytes = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
tracing = "0.1"

clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
time = { version = "0.3", features = ["macros"] }

thiserror = "2"
ipnetwork = "0.21"
regex = "1"
once_cell = "1.21"
ahash = "0.8"
arc-swap = { version = "1", features = ["serde"] }
maxminddb = { version = "0.27", features = ["mmap"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
tokio-native-tls = "0.3"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
native-tls = "0.2"
