[package]
name = "zks-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ZKS Cloudflare Worker - Serverless Edge Service"

[lib]
crate-type = ["cdylib"]

[dependencies]
zks-proto = { path = "../zks-proto" }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

worker = "0.7"
wasm-streams = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["io-util"] }
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "Window",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "ReadableStream",
    "ReadableStreamDefaultReader",
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
# panic = "abort"
